# Sirion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_win.bat  freeglut.pc
cmake/: base.cmake  compile_shader.cmake  generate_shader_includes.cmake
source/: CMakeLists.txt
source/main/: CMakeLists.txt  main.cpp  main.h
source/main/application/: application.h  application_config.h  point_render_application.h
source/main/core/: allocator.h  component.cpp  component.h  core.h  manager.h  scene.cpp  scene.h
source/main/core/manager/: allocator.h  component_manager.h  manager.h
source/main/meta_parser/: CMakeLists.txt
source/main/serializer/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h  serializer.cpp  serializer.h  test.cpp  test.h
source/main/src/: main.cpp
source/main/ui/: vulkan_utils.cpp  vulkan_utils.h  vulkan_wrapper.h  vulkan_wrapper_init.cpp  window.cpp  window.h
source/main/vulkan_wrapper/: vulkan_instance.cpp  vulkan_instance.h  vulkan_utils.cpp  vulkan_utils.h  vulkan_wrapper.h
source/math/: CMakeLists.txt  base.h  math.h  reflected_types.h  vertex.h
source/meta/: CMakeLists.txt  precompile.cmake
source/meta/meta_parser/: CMakeLists.txt
source/meta/meta_parser/parser/generator/: generator.h  reflection_generator.cpp  reflection_generator.h  serializer_generator.cpp
source/meta/meta_parser/parser/language_types/: class.cpp  field.cpp
source/meta/meta_parser/parser/parser/: parser.h
source/meta/meta_parser/parser/template_manager/: template_manager.cpp
source/meta/meta_parser/template/: allSerializer.h.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
source/meta_parser/: CMakeLists.txt
source/meta_parser/parser/: main.cpp  parser_header.h
source/meta_parser/parser/generator/: reflection_generator.cpp  serializer_generator.h
source/meta_parser/parser/parser/: parser.cpp
source/meta_parser/parser/template_manager/: template_manager.cpp
source/meta_parser/template/: allReflectionFile.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache
source/particle_system/: CMakeLists.txt
source/particles/: CMakeLists.txt  particle_generator.cpp  particle_generator.h  particles.cpp  particles.h
source/physics/: CMakeLists.txt  base.cpp  base.h
source/physics/src/: base.cpp
source/precompile/: precompile.cmake  precompile.json.in
source/primitives/: CMakeLists.txt
source/renderer/: CMakeLists.txt  base_renderer.h
source/renderer/primitives/: point_renderer.h
source/renderer/utils/: renderer_config.h  vulkan_utils.cpp  vulkan_utils.h
source/shader/: CMakeLists.txt
source/simulation/: CMakeLists.txt
source/solver/: CMakeLists.txt
