cmake_minimum_required (VERSION 3.8)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_LIBRARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_LIBRARY_DIR})

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_BINARY_DIR})
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_LIBRARY_DIR})
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_LIBRARY_DIR})
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

set(CURR_PROJECT_SOURCE_DIR "${SIRION_ROOT_DIR}/renderer/src")
set(CURR_PROJECT_HEADER_DIR "${SIRION_ROOT_DIR}/renderer/include")
include_directories("include")

file(GLOB_RECURSE SOURCES
    src/*.cpp
)
file(GLOB_RECURSE HEADERS
    include/*.h
)

add_library(SirionRenderer ${SOURCES} ${HEADERS})
add_dependencies(SirionRenderer glfw)

# Build 3rd-party tools
file(GLOB_RECURSE FREEGLUT_LIBRARIES ${PROJECT_LIBRARY_DIR}/freeglut/*.lib)
file(GLOB GLFW_LIBRARY ${PROJECT_LIBRARY_DIR}/glfw/glfw3.lib)

target_link_libraries(SirionRenderer ${GLFW_LIBRARY} ${FREEGLUT_LIBRARIES})

source_group(TREE ${CURR_PROJECT_SOURCE_DIR} FILES ${SOURCES})
source_group(TREE ${CURR_PROJECT_HEADER_DIR} FILES ${HEADERS})

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET SirionRenderer PROPERTY CXX_STANDARD 20)
endif()